ash-cli/tests/snapshots/real/07-lifecycle/02-interrupted.snap
---
source: ash-cli/tests/support/tui_process.rs
expression: screen
---
  <FIXTURE…>                                      …                            [— / —] [Dashboard]

> 请保持流式输出，直到我取消

● turn interrupted





















  ⏸ Manual                                                       /permission to change permissions
  ────────────────────────────────────────────────────────────────────────────────────────────────
  >
  ───────────────────────────────────────────────────────────────────────────── ash-real-scenario

  Enter send  ·  shift+tab mode  ·  shift+↓/↑ effort
