ash-cli/tests/snapshots/real/07-lifecycle/03-http-500.snap
---
source: ash-cli/tests/support/tui_process.rs
expression: screen
---
  <FIXTURE…>                                      …                            [— / —] [Dashboard]

> 触发真实 HTTP 500

● Provider request failed (500). Try again later.






















  ────────────────────────────────────────────────────────────────────────────────────────────────
  >
  ───────────────────────────────────────────────────────────────────────────── ash-real-scenario

  Enter send  ·  shift+tab mode  ·  alt+,/alt+. effort
